acho que ta finalizado

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Menu da Missão</title>
+    <title>Menu</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -15,7 +15,7 @@
         </div>
 
         <div class="comic-panel text-panel">
-            <p>Bem-vindo de volta, Sobrevivente.</p>
+            <p>Bem-vindo, Sobrevivente.</p>
             <p>O sistema recuperou seus dados biométricos. Qual é o seu próximo passo?</p>
         </div>
 
@@ -36,6 +36,8 @@
             </p>
 
         </div>
+
+    
 
     </div>
 
